fonts size and color updates

--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -156,21 +156,21 @@
         <div class="main-content">
 
             <!-- context -->
-            <div class="category">
+            <div class="side-nav-category">
                 <h4 class="category-nav-title">Context</h4>
 
                 <div id="overview" class="content">
-                    <h5 class="content-sub">Overview</h5>
+                    <h5 class="content-title">Overview</h5>
                     <p>CocoTrade is an innovative web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
                 </div>
 
                 <div id="myrole" class="content">
-                    <h5 class="content-sub">My Role</h4>
+                    <h5 class="content-title">My Role</h4>
                     <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
                 </div>
 
                 <div id="timeline" class="content">
-                    <h5 class="content-sub">Timeline</h5>
+                    <h5 class="content-title">Timeline</h5>
                     <p>Our team had 13-weeks to design and develop Glucofit. We used the Agile Scrum Framework, working in sprints and conducting stand-up meetings to track progress, address challenges and ensure alignment between design and development. Designers had roughly 7 weeks to complete the design process, from research and wireframing to protyping and iteration, before handing it off to development.
                     </p>
     
@@ -189,28 +189,28 @@
                 </div>
 
                 <div id="problem" class="content">
-                    <h5 class="content-sub">Problem</h4>
+                    <h5 class="content-title">Problem</h4>
                     <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
                 </div>
 
                 <div id="solution" class="content">
-                    <h5 class="content-sub">Solution</h4>
+                    <h5 class="content-title">Solution</h4>
                     <p>CocoTrade is an all-in-one web app that offers a paperless inventory and sales management system to copra traders. With CocoTrade, business owners can easily view their monthly and daily transactions. Additionally, they can set their own copra prices based on the world market price and keep track of their purchases, observing trends from daily to yearly.</p>
                 </div>
             </div>
 
             <!-- design process -->
-             <div class="category">
+             <div class="side-nav-category">
                 <h4 class="category-nav-title">Design Process</h4>
 
                 <div id="research" class="content">
-                    <h5 class="content-sub">Research</h5>
+                    <h5 class="content-title">Research</h5>
                     <p>The research includes a competitive analysis of existing enterprise solutions such as SAP and Arctic Data.</p>
                     <p>SAP offers extensive features that cater to diverse industries, but its complexity and high customization costs make it less viable for smaller-scale businesses.</p>
                     <p>Arctic Data, while more customizable, also demands intensive resources and specialized roles, making it similarly impractical for small family-run enterprises like copra trading.</p>
                     <p>This highlights the need for a lightweight, user-friendly solution like CocoTrade, designed specifically to meet the unique needs of copra traders in Southeast Asia, focusing on accessibility, scalability, and efficiency.</p>
                     
-                        <div class="sub-parts">
+                        <div class="sub-content-wrapper">
                             <div class="competitor-analysis">
                                 <h6 class="subtitle">Research</h6>
                                 <h6>Competitor Analysis</h6>
@@ -222,7 +222,7 @@
                             </div>
                         </div>
 
-                        <div class="sub-parts">
+                        <div class="sub-content-wrapper">
                             <div class="user-personas">
                                 <h6 class="subtitle">Research</h6>
                                 <h6>User Personas</h6>
@@ -235,9 +235,9 @@
                 </div>
 
                 <div id="wireframes" class="content">
-                    <h5 class="content-sub">Wireframes</h5>
+                    <h5 class="content-title">Wireframes</h5>
 
-                    <div class="sub-parts">
+                    <div class="sub-content-wrapper">
                         <div class="low-fidelity">
                             <h6 class="subtitle">Low-Fidelity Wireframes</h6>
                         </div>
@@ -250,9 +250,9 @@
                 </div>
 
                 <div id="branding" class="content">
-                    <h5 class="content-sub">Branding</h5>
+                    <h5 class="content-title">Branding</h5>
 
-                    <div class="sub-parts">
+                    <div class="sub-content-wrapper">
                         <p>The logo of Cocotrade is a representation of palm leaves, which symbolizes sustainability and the tree where copra is from, with the bar charts representing the platform’s data-dhriven insights and analytics </p>
 
                         <div class="project-images">
@@ -266,9 +266,9 @@
                 </div>
 
                 <div id="mockups" class="content">
-                    <h5 class="content-sub">Mockups</h5>
+                    <h5 class="content-title">Mockups</h5>
 
-                    <div class="sub-parts">
+                    <div class="sub-content-wrapper">
                         <div class="project-images">
                             <img src="/images/cocotrade-mockups.png" alt="">
                         </div>
