--- a/pages/projects/cocotrade.html
+++ b/pages/projects/cocotrade.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="cover-image">
-            <img src="/images/cocotrade-cover2.jpg" alt="">
+            <img src="/images/cocotrade-images/cocotrade-cover.jpg" alt="">
         </div>
 
         <div class="cover-content">
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="cover-subtitle">
-                    <h3>Duration:</h3>
+                    <h3>Timeline:</h3>
                 </div>
 
                 <div class="cover-details">
@@ -161,41 +161,70 @@
 
                 <div id="overview" class="content">
                     <h5 class="content-title">Overview</h5>
-                    <p>CocoTrade is an innovative web app designed to modernize and streamline the operations of small and medium-sized copra trading businesses, particularly in Southeast Asia.</p>
+                    <p>CocoTrade is a web app designed to simplify inventory and sales management for small and medium-sized copra trading businesses. Inspired by a teammate’s family business struggles, the app replaces manual tracking with a digital system that lets users log transactions, monitor inventory, and adjust prices based on world market trends.</p>
+
+                    <p>Our team aimed to create a user-friendly and scalable tool tailored to traders in Southeast Asia, helping them reduce errors, save time, and gain better control over their operations.</p>
                 </div>
 
                 <div id="myrole" class="content">
                     <h5 class="content-title">My Role</h4>
-                    <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                    <p>As the lead designer, I was responsible for ensuring the design consistency across the entire project. I’ve worked with three experienced designers that I collaborated with in defining the visual direction of Cocotrade.</p>
+
+                    <p>I designed the pages for dashboard and inventory screens—from wireframes to high-fidelity prototypes—focusing on clarity, usability and responsiveness. I created reusable components and custom iconography, and implemented Figma variables for colours and typography, which significantly improved design efficiency and developer handoff. I also contributed to the UI kit and project proposal documentation.</p>
+
+                    <p>Lastly, I took the lead in cross-functional collaboration, managing design feedback loops, aligning the team through design reviews, and ensuring that all assets delivered met both user and technical requirements.</p>
                 </div>
 
                 <div id="timeline" class="content">
                     <h5 class="content-title">Timeline</h5>
-                    <p>Our team had 13-weeks to design and develop Glucofit. We used the Agile Scrum Framework, working in sprints and conducting stand-up meetings to track progress, address challenges and ensure alignment between design and development. Designers had roughly 7 weeks to complete the design process, from research and wireframing to protyping and iteration, before handing it off to development.
-                    </p>
+                    <p>We completed Cocotrade over a 12-week timeline. We followed an agile workflow, with weekly sprints that included planning, design, development and testing phases. This approach allowed our cross-functional team to iterate quickly, deliver key features on schedule, and ensure continuous collaboration throughout the project.</p>
     
                     <div class="timeline-images">
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-3.PNG" alt="">
+                            <img src="/images/cocotrade-images/timeline-image-1.jpg" alt="">
                         </div>
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-1.JPG" alt="">
+                            <img src="/images/cocotrade-images/timeline-image-2.jpg" alt="">
                         </div>
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-2.JPG"
+                            <img src="/images/cocotrade-images/timeline-image-3.jpg"
                             alt="">
                         </div>
                     </div>
                 </div>
 
                 <div id="problem" class="content">
-                    <h5 class="content-title">Problem</h4>
-                    <p>The concept of the project started when a team member shared her parents challenges with their copra trading business where they manually track copra market price, adjust prices, and log each transaction. The manual method makes it difficult to track inventory, leading to frequent discrepancies, making the process time-consuming and prone to error. </p>
+                    <h5 class="content-title">The Problem</h5>
+                    <p>Copra trading businesses rely heavily on manual processes for logging transactions, tracking inventory, and adjusting daily copra prices based on fluctuating market rates. These tasks are time-consuming, prone to error, and make it difficult for business owners to maintain accurate records and operate efficiently. Our team identified the need for a digital solution to streamline these operations, reduce manual workload, and support more accurate, real-time decision-making for small and medium-sized copra traders.</p>
                 </div>
 
                 <div id="solution" class="content">
-                    <h5 class="content-title">Solution</h4>
-                    <p>CocoTrade is an all-in-one web app that offers a paperless inventory and sales management system to copra traders. With CocoTrade, business owners can easily view their monthly and daily transactions. Additionally, they can set their own copra prices based on the world market price and keep track of their purchases, observing trends from daily to yearly.</p>
+                    <h5 class="content-title">Our Solution</h5>
+                    <p>Cocotrade provides a streamlined solution to help copra traders manage their daily operations more efficiently. By automating key processes like pricing, inventory tracking, and transaction logging, the platform reduces manual workload and improves accuracy.</p>
+
+                    <div class="sub-content-wrapper">
+                            <div class="sub-content-features">
+                                <i class="fa-solid fa-circle-plus"></i>
+                                <h6 class="features">Real-time Market Pricing</h6>
+                            </div>
+                            <p>Monitor the ﬂuctuations and trends for coconut oil in the world market. In addition, the real-time market pricing will automatically adjust the suggested purchase price of copra for users.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                            <div class="sub-content-features">
+                                <i class="fa-solid fa-circle-plus"></i>
+                                <h6 class="features">Inventory Management</h6>
+                            </div>
+                            <p>Monitor and track inventory status, providing users with real-time updates and notiﬁcation reminders when the warehouse capacity is ready to make a shipment.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                            <div class="sub-content-features">
+                                <i class="fa-solid fa-circle-plus"></i>
+                                <h6 class="features">Finance Management</h6>
+                            </div>
+                            <p>Keep track of copra sales and purchases, with detailed yearly, monthly and weekly reports to monitor and analyze proﬁt margins and the business’s ﬁnancial status.</p>
+                    </div>
                 </div>
             </div>
 
@@ -206,32 +235,40 @@
                 <div id="research" class="content">
                     <h5 class="content-title">Research</h5>
                     <p>The research includes a competitive analysis of existing enterprise solutions such as SAP and Arctic Data.</p>
-                    <p>SAP offers extensive features that cater to diverse industries, but its complexity and high customization costs make it less viable for smaller-scale businesses.</p>
-                    <p>Arctic Data, while more customizable, also demands intensive resources and specialized roles, making it similarly impractical for small family-run enterprises like copra trading.</p>
-                    <p>This highlights the need for a lightweight, user-friendly solution like CocoTrade, designed specifically to meet the unique needs of copra traders in Southeast Asia, focusing on accessibility, scalability, and efficiency.</p>
+
+
+                        <div class="sub-content-wrapper">
+                            <div class="sub-content">
+                                <h5 class="subtitle">Research</h5>
+                                <h6 class="parts-title">User Personas</h6>
+                            </div>
+                            <div id="persona" class="sub-content-images">
+                                <img src="/images/cocotrade-persona-1.jpg" alt="">
+                                <img src="/images/cocotrade-persona-1.jpg" alt="">
+                            </div>
+                        </div>
                     
                         <div class="sub-content-wrapper">
-                            <div class="competitor-analysis">
-                                <h6 class="subtitle">Research</h6>
-                                <h6>Competitor Analysis</h6>
+                            <div class="sub-content">
+                                <h5 class="subtitle">Research</h5>
+                                <h6 class="parts-title">Competitor Analysis</h6>
                             </div>
-                            <p>MySugr, OneTouch, and Glucose Buddy help users track diabetes-related metrics but fall short in providing in-depth insights or a holistic approach to better understand and manage their condition. While they simplify data logging, they often lack robust tools to connect habits, such as lifestyle, food, and medication, to outcomes or offer tailored educational support.</p>
-                            <p>This leaves patients with limited guidance and a fragmented view of their health, making long-term diabetes management more challenging.</p>
+
+                            <p>Enterprise tools like SAP offer a wide range of features for many industries, but they are complex, expensive to customize, and require technical expertise—making them unsuitable for small businesses like copra trading. Arctic Data is more flexible but still requires a lot of resources, dedicated roles, and setup time, which can be overwhelming for small family-run operations.</p>
+                            <p>These challenges show a clear need for a simple, affordable, and easy-to-use solution. CocoTrade was built specifically for small to medium-sized copra traders in Southeast Asia, offering just the right features to manage pricing, inventory, and sales—without the extra cost or complexity.</p>
+
                             <div class="competitor">
-                                <img src="/images/cocotrade-competitive-analysis.jpg" alt="">
+                                <img src="/images/cocotrade-images/competitive-analysis.jpg" alt="">
                             </div>
                         </div>
 
-                        <div class="sub-content-wrapper">
-                            <div class="user-personas">
-                                <h6 class="subtitle">Research</h6>
-                                <h6>User Personas</h6>
-                            </div>
-                            <div class="persona">
-                                <img src="/images/cocotrade-persona-1.jpg" alt="">
-                                <img src="/images/cocotrade-persona-2.jpg" alt="">
-                            </div>
-                        </div>
+                </div>
+
+                <div id="userflow" class="content">
+                    <h5 class="content-title">Userflow</h5>
+                    <div class="sub-content-images">
+                        <img src="/images/cocotrade-images/userflow.png" alt="">
+                    </div>
                 </div>
 
                 <div id="wireframes" class="content">
@@ -286,6 +323,21 @@
 
     </main>
 
+
+    <!-- pagination -->
+    <div class="pagination">
+        <div class="pagination-wrapper">
+            <i></i>
+            <div class="pagination-title">Prev</div>
+            <a href="/pages/projects/cocotrade.html">Cocotrade</a>
+        </div>
+
+        <div class="pagination-wrapper">
+            <i></i>
+            <div class="pagination-title">Next</div>
+            <a href="/pages/projects/cocotrade.html">Innovate Recreation</a>
+        </div>
+    </div>
 
 
         <!-- footer and contacts -->
