--- a/pages/projects/glucofit.html
+++ b/pages/projects/glucofit.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="cover-image">
-            <img src="/images/glucofit-cover.jpg" alt="">
+            <img src="/images/glucofit-images/glucofit-cover.jpg" alt="">
         </div>
 
         <div class="cover-content">
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="cover-subtitle">
-                    <h3>Duration:</h3>
+                    <h3>Timeline:</h3>
                 </div>
 
                 <div class="cover-details">
@@ -134,11 +134,12 @@
                 <nav class="container-nav">
                     <ul>
                         <li><a href="#research">Research</a></li>
+                        <li><a href="#userflow">Userflow</a></li>
                         <li><a href="#wireframes">Wireframes</a></li>
-                        <li><a href="#branding">Branding</a></li>
-                        <li><a href="#mockups">Mockups</a></li>
-                        <li><a href="#marketing">Marketing Matls</a></li>
+                        <li><a href="#uidesign">UI Design</a></li>
+                        <li><a href="#bugtracking">Bug Tracking</a></li>
                         <li><a href="#takeaways">Takeaways</a></li>
+                        
                     </ul>
                 </nav>
             </div>
@@ -148,8 +149,9 @@
                 <h4 class="sub-nav">Links</h4>
                 <nav class="container-nav">
                     <ul>
-                        <li><a href="https://glucofit.ca/" target="_blank">Landing Page</a></li>
-                        <li><a href="../docs/glucofit_project_proposal.pdf" target="_blank">Project Proposal</a></li>
+                        <li><a href="https://glucofit.ca/" target="_blank">Website</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=QoHt4UhI6Jk" target="_blank">Demo</a></li>
+                        <li><a href="../docs/glucofit_project_proposal.pdf" target="_blank">Proposal</a></li>
                     </ul>
                 </nav>
             </div>
@@ -176,18 +178,18 @@
 
                 <div id="timeline" class="content">
                     <h5 class="content-title">Timeline</h5>
-                    <p>Our team had 13-weeks to design and develop Glucofit. We used the Agile Scrum Framework, working in sprints and conducting stand-up meetings to track progress, address challenges and ensure alignment between design and development. Designers had roughly 7 weeks to complete the design process, from research and wireframing to protyping and iteration, before handing it off to development.
+                    <p>Our team had 13-weeks to design and develop Glucofit. We used the agile workflow, working in sprints and conducting stand-up meetings to track progress, address challenges and ensure alignment between design and development. Designers had roughly 7 weeks to complete the design process, from research and wireframing to protyping and iteration, before handing it off to development.
                     </p>
     
                     <div class="timeline-images">
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-3.PNG" alt="">
+                            <img src="/images/glucofit-images/timeline-image-1.png" alt="">
                         </div>
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-1.JPG" alt="">
+                            <img src="/images/glucofit-images/timeline-image-2.jpg" alt="">
                         </div>
                         <div class="image">
-                            <img src="/images/glucofit-images/glucofit-timeline-image-2.JPG"
+                            <img src="/images/glucofit-images/timeline-image-3.jpg"
                             alt="">
                         </div>
                     </div>
@@ -270,8 +272,8 @@
                             <h6 class="parts-title">User Personas</h6>
                         </div>
                         <div id="persona" class="sub-content-images">
-                            <img src="/images/glucofit-images/glucofit-user-persona2.png" alt="">
-                            <img src="/images/glucofit-images/glucofit-user-persona1.png" alt="">
+                            <img src="/images/glucofit-images/userpersona-2.png" alt="">
+                            <img src="/images/glucofit-images/userpersona-1.png" alt="">
                         </div>
                     </div>
 
@@ -283,14 +285,14 @@
                         <p>MySugr, OneTouch, and Glucose Buddy help users track diabetes-related metrics but fall short in providing in-depth insights or a holistic approach to better understand and manage their condition. While they simplify data logging, they often lack robust tools to connect habits, such as lifestyle, food, and medication, to outcomes or offer tailored educational support.</p>
                         <p>This leaves patients with limited guidance and a fragmented view of their health, making long-term diabetes management more challenging.</p>
                         <div id="competitor-background" class="sub-content-images">
-                            <img src="/images/glucofit-images/glucofit-competitor-analysis.png" alt="">
+                            <img src="/images/glucofit-images/competitor-analysis.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div id="userflow" class="content">
                     <h5 class="content-title">Userflow</h5>
-                    <div class="userflow-image">
-                        <img src="/images/glucofit-images/glucofit-userflow.png" alt="">
+                    <div class="sub-content-images">
+                        <img src="/images/glucofit-images/userflow.png" alt="">
                     </div>
                 </div>
                 <div id="wireframes" class="content">
@@ -354,6 +356,72 @@
                         </div>
                     </div>
                 </div>
+
+                <div id="uidesign" class="content">
+                    <h5 class="content-title">UI Design</h5>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Logo</h6>
+                        </div>
+                        <p>Our logo features a sugar cube that our team called "Sugar Baby". In this way, our app gives a fresh take on glucose management while balancing irony with approachability. We used plus and minus symbols for the eyes to indicate glucose highs and lows.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Colors</h6>
+                        </div>
+                        <p>We chose indigo as our primary color for accuracy and trust while orange and yellow as our secondary colors for a friendly and motivating feel.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Typography</h6>
+                        </div>
+                        <p>For typography, we used Nunito Sans for its soft, rounded edges and great legibility.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Illustrations</h6>
+                        </div>
+                        <p>Our illustrations were based on the Sugar Baby to visually represent glucose readings.</p>
+                    </div>
+
+                    <div class="sub-content-wrapper">
+                        <div class="sub-content">
+                            <!-- <h5 class="subtitle">UI Design</h5> -->
+                            <h6 class="parts-title">Buttons, Icons and Badges</h6>
+                        </div>
+                        <p>We design our buttons with rounded corners to maintain the friendliness of app. And our icons were designed as outlined to keep the simplicity. Lastly, our badge were carefully designed to enhance our user engangement.</p>
+                    </div>
+                    <div class="sub-content-images">
+                        <img src="/images/glucofit-images/uidesign-handoff.png" alt="">
+                    </div>
+
+                </div>
+
+                <div id="bugtracking" class="content">
+                    <h5 class="content-title">Bug Tracking</h5>
+                    <p>Add description</p>
+
+                    <div class="sub-content-images">
+                        <img src="/images/glucofit-images/bugbash.png" alt="">
+                    </div>
+
+                </div>
+
+                <div id="takeaways" class="content">
+                    <h5 class="content-title">Takeaways</h5>
+                    <p>Add description</p>
+
+                </div>
+
+
             </div>
         </div>
 
@@ -363,7 +431,7 @@
     <div class="pagination">
         <div class="pagination-wrapper">
             <i></i>
-            <div class="pagination-title">Previous</div>
+            <div class="pagination-title">Prev</div>
             <a href="/pages/projects/cocotrade.html">Cocotrade</a>
         </div>
 
